# MITRE-ECTF-2023

./: IITM_poster_v1_1.pptx
attack_phase/cmu-v1.2-release/: ._cmu-v1.2-release
attack_phase/cmu-v1.2-release/cmu-v1.2-release/: host_tools.tar
attack_phase/morganstate-v1.0-release/: host_tools.tar  morgan-fuckyou.py
attack_phase/morganstate-v1.0-release/firmware/: unpaired_fob-protected.img
attack_phase/msu-v1.1-release/msu-v1.1-release/: host_tools.tar
attack_phase/purdue-v1.1-release/: .main_get_challenge_2.py.swp  firmware_upload.sh  host_tools.tar  purdue_attack_car2.py  purdue_get_challenges.py  purdue_get_responses.py  serial_data.txt  serial_data_response.txt
attack_phase/purdue-v1.1-release/firmware/: unpaired_fob-protected.img
attack_phase/purdue-v1.1-release/src/: .gitignore  Doxyfile  README.md  maintain_state.sh
attack_phase/smu-v1.1-release/: attackonpin.py  commands.txt  host_tools.tar
attack_phase/smu-v1.1-release/firmware/: unpaired_fob-protected.img
attack_phase/tamu-v1.0-release/: car3-TAMU.txt  commands.txt
attack_phase/tamu-v1.0-release/src/docker_env/eeprom_layout/: Cargo.toml
attack_phase/tamu-v1.0-release/src/docker_env/eeprom_layout/src/: car.rs  fob.rs  lib.rs  primitive.rs
attack_phase/tamu-v1.0-release/src/docker_env/gen_eeprom/: Cargo.toml
attack_phase/tamu-v1.0-release/src/docker_env/gen_eeprom/src/: main.rs
attack_phase/tamu-v1.0-release/src/docker_env/pared_core/: Cargo.toml
attack_phase/tamu-v1.0-release/src/docker_env/pared_core/src/: crypto.rs  error.rs  lib.rs
attack_phase/tamu-v1.0-release/src/docker_env/pared_core/src/peripherals/: button.rs  eeprom.rs  mod.rs  uart.rs
attack_phase/tufts-v1.0-release/: break_car2.py  breakfucker.py  brute_pin.py  host_tools.tar  serial_data_final.txt  serial_data_response.txt  tufts_unpaired.img
attack_phase/tufts-v1.0-release/src/: a  (+1 more)
attack_phase/uccs1-v1.0-release/: ._host_tools.tar  brute_pin.py  commands.txt  host_tools.tar
attack_phase/uccs2-v1.1-release/: commands.txt  host_tools.tar
attack_phase/uci-v1.0-release/: car3-UCI.txt  host_tools.tar  uci_brutepin.py  uci_car5.py  uci_enablefeature.py
attack_phase/ucsc-v1.0-release/: host_tools.tar
attack_phase/ucsc-v1.0-release/src/docker_env/util_common/: Cargo.toml
attack_phase/ucsc-v1.0-release/src/docker_env/util_common/src/: communication.rs  lib.rs  messages.rs  timer.rs
attack_phase/ucsc-v1.0-release/src/docker_env/util_common/src/communication/: lower_layers.rs
attack_phase/ucsc-v1.0-release/src/docker_env/util_common/src/communication/lower_layers/: crypto.rs  framing.rs
attack_phase/ucsc-v1.0-release/src/docker_env/util_common/src/communication/lower_layers/crypto/: chachapoly1305.rs
attack_phase/ucsc-v1.0-release/src/docker_env/util_common/src/communication/lower_layers/framing/: bogoframing.rs
attack_phase/ucsc-v1.0-release/src/docker_env/util_no_std/: Cargo.toml  build.rs
attack_phase/ucsc-v1.0-release/src/docker_env/util_no_std/src/: button.rs  communication.rs  eeprom.rs  features.rs  hib.rs  lib.rs  random.rs  runtime.rs  timer.rs
attack_phase/ucsc-v1.0-release/src/docker_env/util_no_std/src/communication/: secure_uart.rs  uart.rs
attack_phase/ucsc-v1.0-release/src/docker_env/util_no_std/src/random/: entropy.rs
attack_phase/ucsc-v1.0-release/src/docker_env/util_no_std/src/random/entropy/: adc.rs  clock_drift.rs  secret.rs  uninit_memory.rs
attack_phase/ucsc-v1.0-release/src/fob/: Cargo.toml  Makefile  build.rs  link.x
attack_phase/ucsc-v1.0-release/src/fob/cargo/: config.toml
attack_phase/ucsc-v1.0-release/src/fob/src/: features.rs  main.rs  pairing.rs  unlock.rs
attack_phase/ucsc-v1.0-release/src/fob/src/pairing/: diffie_hellman.rs  pairing_sequence.rs
attack_phase/ucsc-v1.0-release/src/host_tools/enable_feature/: Cargo.toml
attack_phase/ucsc-v1.0-release/src/host_tools/enable_feature/src/: main.rs
attack_phase/ucsc-v1.0-release/src/host_tools/package_feature/: Cargo.toml
attack_phase/ucsc-v1.0-release/src/host_tools/package_feature/src/: main.rs
attack_phase/ucsc-v1.0-release/src/host_tools/pair_fob/: Cargo.toml
attack_phase/ucsc-v1.0-release/src/host_tools/pair_fob/src/: main.rs
attack_phase/uiuc-v1.4-release/: Answer.txt  brute_pin.py  commands.txt  host_tools.tar
attack_phase/umass-v1.2-release/: host_tools.tar
attack_phase/umass-v1.2-release/src/deployment/ectf-2023-umass-rustlib/: Cargo.toml
attack_phase/umass-v1.2-release/src/deployment/ectf-2023-umass-rustlib/src/: array_type.rs  board_link.rs  car_main.rs  constants.rs  fob_main.rs  lib.rs  mitre_hal.rs  packet_types.rs  rng_manager.rs
attack_phase/umass-v1.2-release/src/deployment/ectf-2023-umass-rustlib/src/scramish/: authenticators.rs  mod.rs  scramish_structs.rs
attack_phase/umass-v1.2-release/src/deployment/precompute_scram_keys/: Cargo.toml  README.md
attack_phase/umass-v1.2-release/src/deployment/precompute_scram_keys/src/: main.rs
attack_phase/umass-v1.2-release/src/docker_env/dummy_proj/: Cargo.toml
attack_phase/unhaven-v1.0-release/: car3-unhaven.txt  host_tools.tar
attack_phase/vt-v1.1-release/: commands.txt
attack_phase/washington-v1.1-release/: car3-WASHINGTON.txt  host_tools.tar
attack_phase/wpi-v1.2-release/: ._wpi-v1.2-release
attack_phase/wpi-v1.2-release/wpi-v1.2-release/src/fob/: Cargo.toml  Makefile.toml  car.cfg  fob.cfg
attack_phase/wpi-v1.2-release/wpi-v1.2-release/src/fob/fob/src/: main.rs
attack_phase/wpi-v1.2-release/wpi-v1.2-release/src/fob/shared/header/: bindings.h
attack_phase/wpi-v1.2-release/wpi-v1.2-release/src/fob/shared/lib/tivaware/driverlib/: eeprom.h
attack_phase/wpi-v1.2-release/wpi-v1.2-release/src/fob/src/: error.rs  hw.rs
attack_phase/wpi-v1.2-release/wpi-v1.2-release/src/fob/src/comms/: packet.rs
attack_phase/wpi-v1.2-release/wpi-v1.2-release/src/fob/src/hw/: eeprom.rs  switches.rs  uart.rs
attack_phase/wpi-v1.2-release/wpi-v1.2-release/src/fob/src/security/: anti_glitching.rs  constant_time.rs
attack_phase/wpi-v1.2-release/wpi-v1.2-release/src/fob/src/utils/: rng.rs
iitm_package/iitm-v1.0-release/: host_tools.tar
(+1649 files in other folders)
