[package]
name = "eeprom_layout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = { version = "0.10.6", default-features = false }
memoffset = "0.8.0"
p256 = { version = "0.10.1", default-features = false, features = ["ecdsa", "sha256"] }
static_assertions = "1.1.0"
