[package]
name = "gen_eeprom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
clap = { version = "4.1.6", features = ["derive"] }
goblin = { version = "0.6.0", features = ["std", "elf32"] }
eeprom_layout = { path = "../eeprom_layout" }
rand = "0.8.5"
chacha20poly1305 = "0.10.1"
p256 = "0.12.0"
color-eyre = "0.6.2"

