[package]
name = "precompute_scram_keys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ectf-2023-umass-rustlib = { path = "../ectf-2023-umass-rustlib", version = "*", features = ["std"]}
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
argon2 = { version = "0.5", default-features = false, features = ["std"]}

hex = "0.4.3"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
serde-hex = "0.1.0"
