[package]
name = "dummy-proj"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
# Keep debug info in the generated lib-gets discarded in linking anyway
debug = true
# Optimize across all code: code is small enough to lead to only benefits
codegen-units = 1

[dependencies]
heapless = "0.7.16"
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
# subtle 2.5 conflicts with other packages
subtle = { version = ">=2.4.1,<2.5", default-features = false }
argon2 = { version = "0.5.0", default-features = false, features = ["std", "zeroize"]}
p256 = { version = "0.13.0", default-features = false, features = ["ecdsa"] }

rand_core = { version = "0.6.4", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }

bytemuck = { version="1.13" }

# Use whatever version of zeroize got pulled in by argon2
zeroize = { version = "*", default-features = false}

hex = "0.4.3"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
serde-hex = "0.1.0"

[dev-dependencies]
rand = { version = "*" }
